changed implementation for association queries and added tests. improved docs linked api to data release
