# app/resources/association.py
@@ -17,33 +17,6 @@ import time
 
 __author__ = 'andreap'
 
-@swagger.model
-class AssociationQuery:
-  "An object to specify an association query"
-  resource_fields = {
-      'target': fields.List(fields.String(attribute='target id', )),
-      'disease': fields.List(fields.String(attribute='disease efo code', )),
-      'filterbyscorevalue_min': fields.Float(attribute='filterbyscorevalue_min',),
-      'filterbyscorevalue_max': fields.Float(attribute='filterbyscorevalue_max',),
-      'filterbydatasource': fields.List(fields.String(attribute='filterbydatasource', )),
-      'filterbydatatype': fields.List(fields.String(attribute='filterbydatatype', )),
-      'filterbypathway': fields.List(fields.String(attribute='filterbypathway', )),
-      'filterbyuniprotkw': fields.List(fields.String(attribute='filterbyuniprotkw', )),
-      'stringency': fields.Float(attribute='filterbydatasource', ),
-      'datastructure': fields.String(attribute='filterbydatasource', ),
-      'expandefo': fields.Boolean(attribute='expandefo', ),
-      'facets': fields.Boolean(attribute='facets', ),
-
-  }
-
-  swagger_metadata = {
-      'gene': {
-          'list': ['one', 'two', 'three']
-      }
-  }
-
-
-
 
 
 
@@ -54,144 +27,6 @@ class Association(restful.Resource):
 
 class FilterBy(restful.Resource):
 
-    _swagger_parameters = [
-            {
-              "name": "target",
-              "description": "a gene identifier listed as target.id",
-              "required": False,
-              "allowMultiple": True,
-              "dataType": "string",
-              "paramType": "query"
-            },
-            # {
-            #   "name": "gene-bool",
-            #   "description": "a boolean operator to combine the list of genes. Can be 'AND' or 'OR'. Default is 'OR'.",
-            #   "required": False,
-            #   "allowMultiple": True,
-            #   "dataType": "string",
-            #   "paramType": "query"
-            # },
-            {
-              "name": "disease",
-              "description": "a efo identifier listed as disease.id",
-              "required": False,
-              "allowMultiple": True,
-              "dataType": "string",
-              "paramType": "query"
-            },
-            #  {
-            #   "name": "efo-bool",
-            #   "description": "a boolean operator to combine the list of efo codes. Can be 'AND' or 'OR'. Default is 'OR'.",
-            #   "required": False,
-            #   "allowMultiple": True,
-            #   "dataType": "string",
-            #   "paramType": "query"
-            # },
-            # {
-            #   "name": "filters",
-            #   "description": "pass a string uncluding the list of filters you want to apply in the right order. Only use if you cannot preserve the order of the arguments in the get request",
-            #   "required": False,
-            #   "allowMultiple": False,
-            #   "dataType": "string",
-            #   "paramType": "query"
-            # },
-             {
-              "name": "filterbyscorevalue_max",
-              "description": "the maximum value of association score you want to filter by",
-              "required": False,
-              "allowMultiple": False,
-              "defaultValue": 1,
-              "dataType": "float",
-              "paramType": "query"
-            },
-            {
-              "name": "filterbyscorevalue_min",
-              "description": "the minimum value of association score you want to filter by",
-              "required": False,
-              "allowMultiple": False,
-              "defaultValue": 0.2,
-              "dataType": "float",
-              "paramType": "query"
-            },
-            {
-              "name": "filterbydatasource",
-              "description": "the datasource you want to consider when calculating the association score. Accepts a list of datasources.",
-              "required": False,
-              "allowMultiple": True,
-              "dataType": "string",
-              "paramType": "query"
-            },
-            {
-              "name": "filterbydatatype",
-              "description": "the datatype you want to consider when calculating the association score. Accepts a list of datatypes.",
-              "required": False,
-              "allowMultiple": True,
-              "dataType": "string",
-              "paramType": "query"
-            },
-            {
-              "name": "filterbypathway",
-              "description": "Consider just genes involved in this pathway. Accepts a list of pathway codes.",
-              "required": False,
-              "allowMultiple": True,
-              "dataType": "string",
-              "paramType": "query"
-            },
-            {
-              "name": "filterbyuniprotkw",
-              "description": "Consider just genes with this uniprot keyword. Accepts a list of uniprot keywords.",
-              "required": False,
-              "allowMultiple": True,
-              "dataType": "string",
-              "paramType": "query"
-            },
-            {
-              "name": "stringency",
-              "description": "Define the stringency in the association score calculation. The higher the stringency the more evidence is needed to reach a score of 1. default is 1",
-              "required": False,
-              "allowMultiple": True,
-              "defaultValue": 1,
-              "dataType": "float",
-              "paramType": "query"
-            },
-            {
-              "name": "datastructure",
-              "description": "Return the output in a list with 'flat' or in a hierarchy with 'tree' (only works when searching for gene). Can be 'flat' or 'tree'",
-              "required": False,
-              "allowMultiple": False,
-              "dataType": "string",
-              "paramType": "query"
-            },
-            {
-              "name": "expandefo",
-              "description": "return the full efo tree if true or just direct links to an EFO code if false",
-              "required": False,
-              "allowMultiple": False,
-              "dataType": "boolean",
-              "defaultValue": "false",
-              "paramType": "query"
-            },
-            {
-              "name": "facets",
-              "description": "return the facets for the call. Default to True",
-              "required": False,
-              "allowMultiple": False,
-              "dataType": "boolean",
-              "defaultValue": "true",
-              "paramType": "query"
-            },
-
-
-          ]
-
-    # _swagger_parameters.extend(Paginable._swagger_parameters)
-    @swagger.operation(
-        nickname='association',
-        produces = ["application/json", "text/xml", "text/csv"],
-
-        # responseClass=PaginatedResponse.__name__,
-        parameters=_swagger_parameters,
-        )
     @is_authenticated
     @rate_limit
     def get(self):
@@ -215,8 +50,8 @@ class FilterBy(restful.Resource):
         parser.add_argument('stringency', type=float, required=False, help="Define the stringency in the association score calculation.")
         # parser.add_argument('filter', type=str, required=False, help="pass a string uncluding the list of filters you want to apply in the right order. Only use if you cannot preserve the order of the arguments in the get request")
         parser.add_argument('datastructure', type=str, required=False, help="Return the output in a list with 'flat' or in a hierarchy with 'tree' (only works when searching for gene)", choices=['flat','tree'])
-        parser.add_argument('expandefo', type=boolean, required=False, help="return the full efo tree if True or just direct links to an EFO code if False", default=False)
-        parser.add_argument('facets', type=boolean, required=False, help="return the facets for the call. Default to True", default=True)
+        parser.add_argument('direct', type=boolean, required=False, help="return the full efo tree if True or just direct links to an EFO code if False", default=True)
+        parser.add_argument('facets', type=boolean, required=False, help="return the facets for the call. Default to True", default=False)
 
         args = parser.parse_args()
         # filters = args.pop('filter',[]) or []
@@ -226,38 +61,17 @@ class FilterBy(restful.Resource):
         #     filters = get_ordered_filter_list(request.query_string)
         # if filters:
         #     args['filter']=filters
-        genes = args.pop('target',[]) or []
+        targets = args.pop('target',[]) or []
         # gene_operator = args.pop('gene-bool','OR') or 'OR'
-        objects = args.pop('disease',[]) or []
+        diseases = args.pop('disease',[]) or []
         # object_operator = args.pop('efo-bool','OR') or 'OR'
 
 
-        if not (genes or objects ):
-            abort(404, message='Please provide at least one target or disease')
-        data = self.get_association(genes, objects,params=args)
+        data = self.get_association(targets, diseases, params=args)
         return CTTVResponse.OK(data,
                                took=time.time() - start_time)
 
 
-    @swagger.operation(
-        summary='''get a list of association objects by target and/or disease .''',
-        notes='test with: {"target":["ENSG00000136997"]}',
-        nickname='association',
-        resourcePath ='/association',
-        produces = ["application/json", "text/xml", "text/csv"],
-        responseClass=PaginatedResponse.__name__,
-        parameters=[
-            {
-              "name": "body",
-              "description": "a json object with a query",
-              "required": False,
-              "allowMultiple": True,
-              "dataType": "string",
-              "paramType": "body",
-              "type": "AssociationQuery"
-            },
-            ]
-        )
     @is_authenticated
     @rate_limit
     def post(self ):
@@ -277,9 +91,9 @@ class FilterBy(restful.Resource):
 
         start_time = time.time()
         args = request.get_json()
-        genes = fix_empty_strings(args.pop('target',[]) or [])
+        targets = fix_empty_strings(args.pop('target',[]) or [])
         # gene_operator = args.pop('gene-bool','OR') or 'OR'
-        objects = fix_empty_strings(args.pop('disease',[]) or [])
+        diseases = fix_empty_strings(args.pop('disease',[]) or [])
         # object_operator = args.pop('efo-bool','OR') or 'OR'
         for k,v in args.items():
             if isinstance(v, list):
@@ -291,9 +105,8 @@ class FilterBy(restful.Resource):
                     if drop:
                         del args[k]
 
-        if not (genes or objects ):
-            abort(404, message='Please provide at least one target or disease')
-        data = self.get_association(genes, objects,params=args)
+
+        data = self.get_association(targets, diseases,params=args)
         return CTTVResponse.OK(data,
                                took=time.time() - start_time)
 
